[package]
name = "be-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.10.0-beta.1", features = [
    "luau-jit",
    "serialize",
    "vendored",
    "async",
] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "json",
    "chrono",
    "uuid",
] }

serde = "1.0"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde"] }
once_cell = "1.19.0"
